ELS Code/main/default/objects/Co_Applicant__c/Co_Applicant__c.object-meta.xml
<CustomObject>
    <label>Co-Applicant</label>
    <nameField>
        <displayFormat>CoApp-{0000}</displayFormat>
        <label>Co-Applicant Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>