ELS Code/main/default/objects/Co_Applicant__c/fields/Co_AppFLAS2__c.field-meta.xml
<CustomField>
    <fullName>Co_AppFLAS2__c</fullName>
    <formula>MID(  Co_Applicant_First_Name__c , 0, 1) &amp; MID(  Co_Applicant_Last_Name__c , 0, 6)&amp; MID(  Co_Applicant_Address_2__c , 0, 9) &amp;  Co_Applicant_Zip__c</formula>
    <label>Co-Applicant FLAS2</label>
    <type>Text</type>
</CustomField>