ELS Code/main/default/objects/Co_Applicant__c/fields/Co_AppLAZ2__c.field-meta.xml
<CustomField>
    <fullName>Co_AppLAZ2__c</fullName>
    <formula>MID(  Co_Applicant_Last_Name__c , 0, 6) &amp; MID(  Co_Applicant_Address_2__c , 0, 9) &amp; MID(  Co_Applicant_Zip__c , 0, 5)</formula>
    <label>Co-Applicant LAZ2</label>
    <type>Text</type>
</CustomField>