ELS Code/main/default/objects/Co_Applicant__c/fields/Co_Applicant_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Address_2__c</fullName>
    <label>Co-Applicant Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>