ELS Code/main/default/objects/Co_Applicant__c/fields/Co_Applicant_Country__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Country__c</fullName>
    <label>Co-Applicant Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>