ELS Code/main/default/objects/Co_Applicant__c/fields/Co_Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Phone__c</fullName>
    <label>Co-Applicant Phone</label>
    <type>Phone</type>
</CustomField>