ELS Code/main/default/objects/Co_Applicant__c/fields/Co_AppPF__c.field-meta.xml
<CustomField>
    <fullName>Co_AppPF__c</fullName>
    <formula>Co_Applicant_Phone__c  &amp;  Co_Applicant_First_Name__c</formula>
    <label>Co-Applicant PF</label>
    <type>Text</type>
</CustomField>