ELS Code/main/default/objects/Co_Applicant__c/fields/Co_AppPL__c.field-meta.xml
<CustomField>
    <fullName>Co_AppPL__c</fullName>
    <formula>Co_Applicant_Phone__c  &amp;  Co_Applicant_Last_Name__c</formula>
    <label>Co-Applicant PL</label>
    <type>Text</type>
</CustomField>