ELS Code/main/default/objects/Co_Applicant__c/fields/CoAppFLAS__c.field-meta.xml
<CustomField>
    <fullName>CoAppFLAS__c</fullName>
    <formula>MID(  Co_Applicant_First_Name__c , 0, 1) &amp; MID(  Co_Applicant_Last_Name__c  , 0, 6)&amp; MID(  Co_Applicant_Address_1__c  , 0, 9) &amp;  Co_Applicant_State__c</formula>
    <label>Co-Applicant FLAS</label>
    <type>Text</type>
</CustomField>