ELS Code/main/default/objects/Co_Applicant__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Co-Applicants</relationshipLabel>
    <relationshipName>Co_Applicants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>