ELS Code/main/default/objects/Co_Applicant__c/fields/Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed?</label>
    <type>Checkbox</type>
</CustomField>