ELS Code/main/default/objects/Co_Applicant__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Co-Applicants</relationshipLabel>
    <relationshipName>Co_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>