ELS Code/main/default/objects/Co_Applicant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Co_Applicant_First_Name__c</columns>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>